Fix z-index.

--- a/styles/index.sass
+++ b/styles/index.sass
@@ -19,6 +19,7 @@
   background: rgba(0, 0, 0, 0.8)
   color: #fff
   top: 100%
+  z-index: 2 !important
   /* Creates a small triangle extender for the tooltip
   /* Style northward tooltips differently
   &:after
@@ -38,7 +39,7 @@
 
 .fullscreen
   position: fixed !important
-  z-index: 0 !important //20
+  z-index: 1 !important
   background: #fff
   left: 0
   top: 0
