--- a/styles/index.styl
+++ b/styles/index.styl
@@ -19,6 +19,7 @@
   background rgba(0, 0, 0, 0.8)
   color white
   top 100%
+  z-index 2 !important
   /* Creates a small triangle extender for the tooltip */
   &:after
     box-sizing border-box
@@ -43,4 +44,4 @@
   top 0
   width 100% !important
   height 100%
-  z-index 0 !important
+  z-index 1 !important
